--- a/index.html
+++ b/index.html
@@ -19,8 +19,12 @@
             </a>
   
             <form class="header-menu__search header-search" action="#" method="GET">
-              <input class="header-search__field" type="text" name="search-field" placeholder="Поиск:">
-              <button class="header-search__btn" type="submit"></button>
+                <input class="header-search__field" type="text" name="search-field" placeholder="Поиск:">
+                <button class="header-search__btn" type="submit">
+                  <svg class="header-search__svg" xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17">
+                    <path class="header-search__path" fill="#ffffff" d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z"/>
+                  </svg>
+                </button>
             </form>
 
             <a class="header-menu__bookmarks header-bookmarks" href="#">
@@ -50,7 +54,13 @@
             </div>
             
             <div class="header-info__login header-login">
-              <a class="header-login__authorization" href="#">Войти</a>
+              <a class="header-login__authorization" href="#">
+                <svg class="header-login__svg" xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 20 17">
+                  <path fill="#c5c5c5" d="M14.875 8.5L6 0v6H0v5h6v6z"/>
+                  <path fill="#c5c5c5" d="M16.986 15.01h-5.027V17h5.027c2.178 0 3.004-1.81 3.029-3.026V3.028C19.99 1.811 19.164 0 16.986 0h-5.027v1.99h5.027c.839 0 .992.681 1.01 1.057v10.904c-.017.376-.171 1.059-1.01 1.059z"/>
+                </svg>
+                Войти
+              </a>
               <a class="header-login__registration" href="#">Регистрация</a>
             </div>
           </div>
@@ -118,7 +128,7 @@
                   <h3 class="slider-item__heading">Перфораторы</h3>
                   <span class="slider-item__text">Настоящие мужские игрушки</span>
                 </div>
-                <a class="slider-item__link button" href="#">Открыть каталог</a>
+                <a class="slider-item__link button" href="catalog.html">Открыть каталог</a>
               </div>
 
               <div class="slider__item slider-item active">
@@ -126,7 +136,7 @@
                   <h3 class="slider-item__heading">Дрели</h3>
                   <span class="slider-item__text">Соседям на радость</span>
                 </div>
-                <a class="slider-item__link button" href="#">Открыть каталог</a>
+                <a class="slider-item__link button" href="catalog.html">Открыть каталог</a>
               </div>
             </div>
           </div>
@@ -285,7 +295,7 @@
                 Залезть в долговую яму стало проще! <br>
                 Кредитные консультанты придут вам на помощь.
               </p>
-              <a class="services-tab__btn button" href="#">Оставить заявку</a> 
+              <a class="services-tab__btn button" href="#">Отправить заявку</a> 
             </div>
           </div>
         </section>
@@ -395,43 +405,46 @@
   
             <div class="footer-bottom__inner footer-dev">
               <span class="footer-dev__text">Разработано - </span>
-              <a class="footer-dev__link" href="https://htmlacademy.ru">htmlacademy.ru</a>
+              <a class="footer-dev__link" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
             </div>
           </div>
           </div>
       </footer>
 
       <section class="writeus-popup">
-        <div class="wrapper">
-          <h2 class="writeus-popup__heading">Написать нам</h2>
+          <h2 class="writeus-popup__heading visually-hidden">Написать нам</h2>
           <form class="writeus-popup__form" action="#" method="POST">
-            <div class="writeus-popup__item">
-              <label class="writeus-popup__label" for="wrte-us-name">Ваше имя:</label>
-              <input class="writeus-popup__input name" type="text" name="name" placeholder="Имя Фамилия" id="wrte-us-name">
+            <div class="wrapper">
+              <div class="writeus-popup__item">
+                <label class="writeus-popup__label" for="wrte-us-name">Ваше имя:</label>
+                <input class="writeus-popup__input name" type="text" name="name" placeholder="Имя Фамилия" id="wrte-us-name">
+              </div>
+
+              <div class="writeus-popup__item">
+                <label class="writeus-popup__label" for="write-us-email">Ваш e-mail:</label>
+                <input class="writeus-popup__input email" type="email" name="email" placeholder="email@example.com" id="write-us-email">
+              </div>
+
+              <div class="writeus-popup__item">
+                <label class="writeus-popup__label" for="write-us-message">Текст письма:</label>
+                <textarea class="writeus-popup__input message" type="text" name="message" id="write-us-message" cols="30" rows="5">В свободной форме</textarea>
+                <!-- <input class="writeus-popup__input message" type="text" name="message" placeholder="В свободной форме" id="write-us-message"> -->
+              </div>
             </div>
 
-            <div class="writeus-popup__item">
-              <label class="writeus-popup__label" for="write-us-email">Ваш e-mail:</label>
-              <input class="writeus-popup__input email" type="email" name="email" placeholder="email@example.com" id="write-us-email">
+            <div class="bottom-wrap">
+              <button class="writeus-popup__button button" type="submit">
+                Отправить
+              </button>
             </div>
-
-            <div class="writeus-popup__item">
-              <label class="writeus-popup__label" for="write-us-message">Текст письма:</label>
-              <input class="writeus-popup__input message" type="text" name="message" placeholder="В свободной форме" id="write-us-message">
-            </div>
-
-            <button class="writeus-popup__button button" type="submit">
-              Отправить
-            </button>
           </form>
           <button class="writeus-popup__close close" type="button">
             Зыкрыть
           </button>
-        </div>
       </section>
 
       <section class="map-popup">
-        <h2 class="map-popup__heading">Как до нас добраться</h2>
+        <h2 class="map-popup__heading visually-hidden">Как до нас добраться</h2>
         <img class="map-popup__img" src="img/big-map.jpg" width="940" height="446" alt="Как до нас добраться">
         <button class="map-popup__close close" type="button">Закрыть</button>
       </section>
