--- a/index.html
+++ b/index.html
@@ -15,7 +15,17 @@
         <div class="header__menu header-menu">
           <div class="wrap">
             <a class="header-menu__logo  logo" href="#">
-              <img class="header-menu__img" src="img/logo-technomart.svg" width="109" height="19" alt="На главную Техномарт">
+              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid" width="109" height="19" viewBox="0 0 136.5 21.59">
+                <defs>
+                  <style>
+                    .cls-1 {
+                      fill: #fff;
+                      fill-rule: evenodd;
+                    }
+                  </style>
+                </defs>
+                <path d="M131.694,2.397 L131.694,21.297 L128.994,21.297 L128.994,2.397 L124.194,2.397 L124.194,0.297 L136.494,0.297 L136.494,2.397 L131.694,2.397 ZM121.299,13.512 C120.829,14.102 120.239,14.522 119.529,14.772 C118.819,15.022 117.974,15.147 116.994,15.147 C116.534,15.147 116.014,15.117 115.434,15.057 C114.854,14.997 114.374,14.927 113.994,14.847 L113.994,21.297 L111.294,21.297 L111.294,0.597 C112.054,0.377 112.819,0.222 113.589,0.132 C114.359,0.042 115.194,-0.003 116.094,-0.003 C117.294,-0.003 118.314,0.122 119.154,0.372 C119.994,0.622 120.674,1.037 121.194,1.617 C121.714,2.197 122.094,2.967 122.334,3.927 C122.574,4.887 122.694,6.077 122.694,7.497 C122.694,8.957 122.579,10.177 122.349,11.157 C122.119,12.137 121.769,12.922 121.299,13.512 ZM119.769,4.797 C119.619,4.077 119.384,3.507 119.064,3.087 C118.744,2.667 118.339,2.372 117.849,2.202 C117.359,2.032 116.774,1.947 116.094,1.947 L113.994,1.947 L113.994,13.047 L116.094,13.047 C116.774,13.047 117.359,12.962 117.849,12.792 C118.339,12.622 118.744,12.327 119.064,11.907 C119.384,11.487 119.619,10.917 119.769,10.197 C119.919,9.477 119.994,8.577 119.994,7.497 C119.994,6.417 119.919,5.517 119.769,4.797 ZM104.544,15.897 L98.544,15.897 L97.194,21.297 L94.494,21.297 L99.594,0.297 L103.494,0.297 L108.594,21.297 L105.894,21.297 L104.544,15.897 ZM101.604,3.297 L101.484,3.297 L98.994,13.797 L104.094,13.797 L101.604,3.297 ZM88.644,5.697 L88.494,5.697 L84.144,18.597 L81.444,18.597 L77.094,5.697 L76.944,5.697 L76.044,21.297 L73.344,21.297 L74.544,0.297 L77.844,0.297 L82.734,14.697 L82.854,14.697 L87.744,0.297 L91.044,0.297 L92.244,21.297 L89.544,21.297 L88.644,5.697 ZM68.484,19.347 C67.924,20.167 67.249,20.747 66.459,21.087 C65.669,21.427 64.764,21.597 63.744,21.597 C62.724,21.597 61.819,21.427 61.029,21.087 C60.239,20.747 59.564,20.167 59.004,19.347 C58.444,18.527 58.019,17.422 57.729,16.032 C57.439,14.642 57.294,12.897 57.294,10.797 C57.294,8.697 57.439,6.952 57.729,5.562 C58.019,4.172 58.444,3.067 59.004,2.247 C59.564,1.427 60.239,0.847 61.029,0.507 C61.819,0.167 62.724,-0.003 63.744,-0.003 C64.764,-0.003 65.669,0.167 66.459,0.507 C67.249,0.847 67.924,1.427 68.484,2.247 C69.044,3.067 69.469,4.172 69.759,5.562 C70.049,6.952 70.194,8.697 70.194,10.797 C70.194,12.897 70.049,14.642 69.759,16.032 C69.469,17.422 69.044,18.527 68.484,19.347 ZM67.179,6.357 C66.969,5.197 66.694,4.277 66.354,3.597 C66.014,2.917 65.614,2.447 65.154,2.187 C64.694,1.927 64.224,1.797 63.744,1.797 C63.264,1.797 62.794,1.927 62.334,2.187 C61.874,2.447 61.474,2.917 61.134,3.597 C60.794,4.277 60.519,5.197 60.309,6.357 C60.099,7.517 59.994,8.997 59.994,10.797 C59.994,12.597 60.099,14.077 60.309,15.237 C60.519,16.397 60.794,17.317 61.134,17.997 C61.474,18.677 61.874,19.147 62.334,19.407 C62.794,19.667 63.264,19.797 63.744,19.797 C64.224,19.797 64.694,19.667 65.154,19.407 C65.614,19.147 66.014,18.677 66.354,17.997 C66.694,17.317 66.969,16.397 67.179,15.237 C67.389,14.077 67.494,12.597 67.494,10.797 C67.494,8.997 67.389,7.517 67.179,6.357 ZM50.994,11.697 L44.694,11.697 L44.694,21.297 L41.994,21.297 L41.994,0.297 L44.694,0.297 L44.694,9.597 L50.994,9.597 L50.994,0.297 L53.694,0.297 L53.694,21.297 L50.994,21.297 L50.994,11.697 ZM36.745,21.297 L32.995,12.297 L29.245,21.297 L26.545,21.297 L31.045,10.497 L26.995,0.297 L29.695,0.297 L32.995,8.697 L36.295,0.297 L38.995,0.297 L34.945,10.497 L39.445,21.297 L36.745,21.297 ZM14.695,0.297 L24.895,0.297 L24.895,2.397 L17.395,2.397 L17.395,9.297 L23.995,9.297 L23.995,11.397 L17.395,11.397 L17.395,19.197 L24.895,19.197 L24.895,21.297 L14.695,21.297 L14.695,0.297 ZM7.495,21.297 L4.795,21.297 L4.795,2.397 L-0.005,2.397 L-0.005,0.297 L12.295,0.297 L12.295,2.397 L7.495,2.397 L7.495,21.297 Z" class="cls-1"/>
+              </svg>              
             </a>
   
             <form class="header-menu__search header-search" action="#" method="GET">
@@ -43,8 +53,8 @@
         <div class="wrap">
           <div class="header__info header-info">
             <h1 class="header-info__heading">
-              Интернет-магазин <br>
-              строительных материалов <br> 
+              Интернет-магазин 
+              строительных материалов <br>
               и инструментов для ремонта
             </h1>
   
@@ -111,36 +121,45 @@
                 <h3 class="categories-item__heading">Техника</h3>
                 <a class="categories-item__link" href="#">Для стройки</a>
               </li>
-              <li class="categories__item categories-item">
-                <h3 class="categories-item__heading">Скидки 50%</h3>
-                <a class="categories-item__link" href="#">На 350 товаров</a>
-              </li>
-              <li class="break"></li>
-              <li class="categories__item categories-item">
-                <h3 class="categories-item__heading">Доставка</h3>
-                <a class="categories-item__link" href="#">Бесплатно</a>
-              </li>
             </ul>
 
-            <div class="categories__slider slider">
-              <div class="slider__item slider-item">
-                <div class="slider-item__inner">
-                  <h3 class="slider-item__heading">Перфораторы</h3>
-                  <span class="slider-item__text">Настоящие мужские игрушки</span>
+            <div class="categories__inner wrap">
+              <div class="categories__slider slider">
+                <div class="slider__item slider-item">
+                  <div class="slider-item__inner">
+                    <h3 class="slider-item__heading">Перфораторы</h3>
+                    <span class="slider-item__text">Настоящие мужские игрушки</span>
+                  </div>
+                  <a class="slider-item__link button" href="catalog.html">Открыть каталог</a>
                 </div>
-                <a class="slider-item__link button" href="catalog.html">Открыть каталог</a>
+  
+                <div class="slider__item slider-item active">
+                  <div class="slider-item__inner">
+                    <h3 class="slider-item__heading">Дрели</h3>
+                    <span class="slider-item__text">Соседям на радость</span>
+                  </div>
+                  <a class="slider-item__link button" href="catalog.html">Открыть каталог</a>
+                </div>
+  
+                <button class="slider__btn-left" type="button"></button>
+                <button class="slider__btn-right" type="button"></button>
+
+                <div class="slider__dots">
+                  <button type="button" class="slider__dot"></button>
+                  <button type="button" class="slider__dot active"></button>
+                </div>
               </div>
 
-              <div class="slider__item slider-item active">
-                <div class="slider-item__inner">
-                  <h3 class="slider-item__heading">Дрели</h3>
-                  <span class="slider-item__text">Соседям на радость</span>
-                </div>
-                <a class="slider-item__link button" href="catalog.html">Открыть каталог</a>
-              </div>
-
-              <button class="slider__btn-left" type="button"></button>
-              <button class="slider__btn-right" type="button"></button>
+              <ul class="categories__list column">
+                <li class="categories__item categories-item">
+                  <h3 class="categories-item__heading">Скидки 50%</h3>
+                  <a class="categories-item__link" href="#">На 350 товаров</a>
+                </li>
+                <li class="categories__item categories-item">
+                  <h3 class="categories-item__heading">Доставка</h3>
+                  <a class="categories-item__link" href="#">Бесплатно</a>
+                </li>
+              </ul>
             </div>
           </div>
         </section>
@@ -163,7 +182,7 @@
                   <button class="product-hover__bookmarks" type="button">В закладки</button>
                 </div>
                 <strong class="products-item__sale">32500 Р.</strong>
-                <a class="products-item__btn" href="#">25 500 Р.</a>
+                <a class="products-item__btn" href="#">25500 Р.</a>
               </li>
   
               <li class="products__item products-item">
@@ -176,7 +195,7 @@
                   <button class="product-hover__bookmarks" type="button">В закладки</button>
                 </div>
                 <strong class="products-item__sale">22500 Р.</strong>
-                <a class="products-item__btn" href="#">15 500 Р.</a>
+                <a class="products-item__btn" href="#">15500 Р.</a>
               </li>
   
               <li class="products__item products-item">
@@ -189,10 +208,10 @@
                   <button class="product-hover__bookmarks" type="button">В закладки</button>
                 </div>
                 <strong class="products-item__sale">30500 Р.</strong>
-                <a class="products-item__btn" href="#">25 500 Р.</a>
+                <a class="products-item__btn" href="#">25500 Р.</a>
               </li>
               
-              <li class="products__item products-item">
+              <li class="products__item products-item new">
                 <a class="products-item__link" href="#">
                   <h3 class="products-item__heading">Перфоратор BOSCH BFG 2000</h3>
                   <img class="products-item__img" src="img/Perforator_3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
@@ -263,7 +282,7 @@
           <div class="wrap">
             <h2 class="services__heading">Сервисы</h2>
             <p class="services__text text">
-              Хороший интернет-магазин отличается от плохого не только ценами! <br>
+              Хороший интернет-магазин отличается от плохого не только ценами!
               Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.
             </p>
 
@@ -308,7 +327,7 @@
             <div class="company__info company-info">
               <h2 class="company-info__heading">Компания «Техномарт»</h2>
               <p class="company-info__text text">
-                Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и<br>
+                Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и
                 строительства не оставит равнодушными любителей сэкономить на гастарбайтерах. 
               </p>
               <p class="company-info__text text">
@@ -348,7 +367,17 @@
           <div class="wrap">
             <div class="footer-top__inner">
               <a class="footer-top__logo logo" href="#">
-                <img class="footer-top__img" src="img/logo-technomart.svg" width="138" height="22" alt="Техномарт">
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid" width="138" height="22" viewBox="0 0 136.5 21.59">
+                  <defs>
+                    <style>
+                      .cls-1 {
+                        fill: #fff;
+                        fill-rule: evenodd;
+                      }
+                    </style>
+                  </defs>
+                  <path d="M131.694,2.397 L131.694,21.297 L128.994,21.297 L128.994,2.397 L124.194,2.397 L124.194,0.297 L136.494,0.297 L136.494,2.397 L131.694,2.397 ZM121.299,13.512 C120.829,14.102 120.239,14.522 119.529,14.772 C118.819,15.022 117.974,15.147 116.994,15.147 C116.534,15.147 116.014,15.117 115.434,15.057 C114.854,14.997 114.374,14.927 113.994,14.847 L113.994,21.297 L111.294,21.297 L111.294,0.597 C112.054,0.377 112.819,0.222 113.589,0.132 C114.359,0.042 115.194,-0.003 116.094,-0.003 C117.294,-0.003 118.314,0.122 119.154,0.372 C119.994,0.622 120.674,1.037 121.194,1.617 C121.714,2.197 122.094,2.967 122.334,3.927 C122.574,4.887 122.694,6.077 122.694,7.497 C122.694,8.957 122.579,10.177 122.349,11.157 C122.119,12.137 121.769,12.922 121.299,13.512 ZM119.769,4.797 C119.619,4.077 119.384,3.507 119.064,3.087 C118.744,2.667 118.339,2.372 117.849,2.202 C117.359,2.032 116.774,1.947 116.094,1.947 L113.994,1.947 L113.994,13.047 L116.094,13.047 C116.774,13.047 117.359,12.962 117.849,12.792 C118.339,12.622 118.744,12.327 119.064,11.907 C119.384,11.487 119.619,10.917 119.769,10.197 C119.919,9.477 119.994,8.577 119.994,7.497 C119.994,6.417 119.919,5.517 119.769,4.797 ZM104.544,15.897 L98.544,15.897 L97.194,21.297 L94.494,21.297 L99.594,0.297 L103.494,0.297 L108.594,21.297 L105.894,21.297 L104.544,15.897 ZM101.604,3.297 L101.484,3.297 L98.994,13.797 L104.094,13.797 L101.604,3.297 ZM88.644,5.697 L88.494,5.697 L84.144,18.597 L81.444,18.597 L77.094,5.697 L76.944,5.697 L76.044,21.297 L73.344,21.297 L74.544,0.297 L77.844,0.297 L82.734,14.697 L82.854,14.697 L87.744,0.297 L91.044,0.297 L92.244,21.297 L89.544,21.297 L88.644,5.697 ZM68.484,19.347 C67.924,20.167 67.249,20.747 66.459,21.087 C65.669,21.427 64.764,21.597 63.744,21.597 C62.724,21.597 61.819,21.427 61.029,21.087 C60.239,20.747 59.564,20.167 59.004,19.347 C58.444,18.527 58.019,17.422 57.729,16.032 C57.439,14.642 57.294,12.897 57.294,10.797 C57.294,8.697 57.439,6.952 57.729,5.562 C58.019,4.172 58.444,3.067 59.004,2.247 C59.564,1.427 60.239,0.847 61.029,0.507 C61.819,0.167 62.724,-0.003 63.744,-0.003 C64.764,-0.003 65.669,0.167 66.459,0.507 C67.249,0.847 67.924,1.427 68.484,2.247 C69.044,3.067 69.469,4.172 69.759,5.562 C70.049,6.952 70.194,8.697 70.194,10.797 C70.194,12.897 70.049,14.642 69.759,16.032 C69.469,17.422 69.044,18.527 68.484,19.347 ZM67.179,6.357 C66.969,5.197 66.694,4.277 66.354,3.597 C66.014,2.917 65.614,2.447 65.154,2.187 C64.694,1.927 64.224,1.797 63.744,1.797 C63.264,1.797 62.794,1.927 62.334,2.187 C61.874,2.447 61.474,2.917 61.134,3.597 C60.794,4.277 60.519,5.197 60.309,6.357 C60.099,7.517 59.994,8.997 59.994,10.797 C59.994,12.597 60.099,14.077 60.309,15.237 C60.519,16.397 60.794,17.317 61.134,17.997 C61.474,18.677 61.874,19.147 62.334,19.407 C62.794,19.667 63.264,19.797 63.744,19.797 C64.224,19.797 64.694,19.667 65.154,19.407 C65.614,19.147 66.014,18.677 66.354,17.997 C66.694,17.317 66.969,16.397 67.179,15.237 C67.389,14.077 67.494,12.597 67.494,10.797 C67.494,8.997 67.389,7.517 67.179,6.357 ZM50.994,11.697 L44.694,11.697 L44.694,21.297 L41.994,21.297 L41.994,0.297 L44.694,0.297 L44.694,9.597 L50.994,9.597 L50.994,0.297 L53.694,0.297 L53.694,21.297 L50.994,21.297 L50.994,11.697 ZM36.745,21.297 L32.995,12.297 L29.245,21.297 L26.545,21.297 L31.045,10.497 L26.995,0.297 L29.695,0.297 L32.995,8.697 L36.295,0.297 L38.995,0.297 L34.945,10.497 L39.445,21.297 L36.745,21.297 ZM14.695,0.297 L24.895,0.297 L24.895,2.397 L17.395,2.397 L17.395,9.297 L23.995,9.297 L23.995,11.397 L17.395,11.397 L17.395,19.197 L24.895,19.197 L24.895,21.297 L14.695,21.297 L14.695,0.297 ZM7.495,21.297 L4.795,21.297 L4.795,2.397 L-0.005,2.397 L-0.005,0.297 L12.295,0.297 L12.295,2.397 L7.495,2.397 L7.495,21.297 Z" class="cls-1"/>
+                </svg>
               </a>
               <p class="footer-top__text">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br> +7 (812) 555-05-55</p>
             </div>
@@ -401,12 +430,12 @@
               </li>
             </ul>
   
-            <div class="footer-bottom__inner footer-dev">
+            <div class="footer-bottom__feed-inner footer-dev">
               <span class="footer-dev__text">Обратная связь:</span>
               <a class="footer-dev__link" href="https://mail@htmlacademy.ru">mail@htmlacademy.ru</a>
             </div>
   
-            <div class="footer-bottom__inner footer-dev">
+            <div class="footer-bottom__dev-inner footer-dev">
               <span class="footer-dev__text">Разработано - </span>
               <a class="footer-dev__link" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
             </div>
@@ -430,7 +459,7 @@
 
               <div class="writeus-popup__item">
                 <label class="writeus-popup__label" for="write-us-message">Текст письма:</label>
-                <textarea class="writeus-popup__input message" type="text" name="message" id="write-us-message" cols="30" rows="5">В свободной форме</textarea>
+                <textarea class="writeus-popup__input message" name="message" id="write-us-message" cols="30" rows="5">В свободной форме</textarea>
                 <!-- <input class="writeus-popup__input message" type="text" name="message" placeholder="В свободной форме" id="write-us-message"> -->
               </div>
             </div>
